# Fractalizer

./: .gitignore  fractalfactory.py  fractals.py  image.py  main.py  palettefactory.py  palettes.py  parser.py  pyproject.toml  readme.md
animation/: __init__.py  animation_config.py  animator.py  interpolator.py  video_renderer.py
data/: README.md  bs-basic.frac  bs-miniship.frac  bs-prow.frac  bs-stern.frac  bs-towers.frac  bs-wake.frac  bsj-basic.frac  bsj-caterpillar.frac  bsj-take-off-every-zig.frac  burningship.frac  j-basic.frac  j-boring.frac  j-connected.frac  j-fjords.frac  j-hourglass.frac  j-lace-curtains.frac  j-unconnected.frac  j-x-marks-the-spot.frac  julia-1.1301.frac  m-8-points.frac  m-basic.frac  m-branches@0064.frac  m-branches@0128.frac  m-branches@0256.frac  m-branches@0512.frac  m-branches@1024.frac  m-coral.frac  m-elephants.frac  m-enhance.frac  m-leaf.frac  m-minibrot.frac  m-rabbit-hole.frac  m-seahorse.frac  m-spiral-jetty.frac  m-spiral0.frac  m-spiral1.frac  m-spiral1@0256.frac  m-spiral1@0512.frac  m-spiral1@1024.frac  (+28 more)
output/: .gitkeep
